[package]
name = "warp_webdev"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = "1.0.219"
serde_json = "1.0.140"
tokio = "1.44.2"
warp="0.3"
mongodb="3.2.3"
dotenv = "0.15.0"
config = "0.15.11"
tracing = {version="0.1", features=["log"]}
tracing-subscriber = {version="0.3.19", features=["env-filter"]}
jsonwebtoken = "9.3.1"
handle-errors = {path="./handle-errors"}
